--- a/index.html
+++ b/index.html
@@ -5,66 +5,35 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>law-index (public artifacts)</title>
   <style>
-    :root { --bg:#0b3a5b; --ink:#0b3a5b; --panel:#ffffff; --muted:#6b7280; }
-    * { box-sizing: border-box; }
-    body { margin:0; font:16px/1.5 system-ui, -apple-system, Segoe UI, Roboto, "Helvetica Neue", Arial, sans-serif; background:#f7f9fc; color:#111827; }
-    header { background:var(--bg); color:#fff; padding:18px 20px; }
-    header .brand { display:flex; align-items:center; gap:12px; }
-    header .mark { width:34px; height:34px; border-radius:6px; display:grid; place-items:center; background:#fff; color:var(--ink); font-weight:700; font-family: ui-serif, Georgia, serif; }
-    main { max-width:920px; margin:28px auto; padding:0 16px; }
-    .card { background:var(--panel); border:1px solid #e5e7eb; border-radius:12px; padding:18px; box-shadow:0 1px 2px rgba(0,0,0,.04); }
-    h1 { margin:0 0 6px; font-size:22px; }
-    h2 { font-size:18px; margin:0 0 8px; }
-    p  { margin:8px 0 16px; color:#374151; }
-    ul { list-style:none; padding:0; margin:0; display:grid; gap:10px; }
-    li a { display:flex; justify-content:space-between; align-items:center;
-           padding:12px 14px; border:1px solid #e5e7eb; border-radius:10px;
-           text-decoration:none; color:#0b3a5b; background:#fff; }
-    li a:hover { border-color:#c7d2fe; background:#f8fafc; }
-    code { background:#f3f4f6; padding:.1em .35em; border-radius:6px; }
-    .muted { color:var(--muted); font-size:14px; }
+    :root { --bg:#0b3a5b; --panel:#ffffff; --muted:#6b7280; }
+    * { box-sizing:border-box; }
+    body { margin:0; font:16px/1.45 system-ui,-apple-system,Segoe UI,Roboto,"Helvetica Neue",Arial,sans-serif; background:#f8fafc; color:#111827; }
+    header { background:var(--bg); color:#fff; }
+    .wrap { max-width:1100px; margin:0 auto; padding:12px 16px; display:flex; align-items:center; gap:14px; }
+    .brand { display:inline-grid; place-items:center; width:44px; height:44px; border-radius:8px; background:#fff; box-shadow:0 0 0 1px rgba(0,0,0,.06) inset; }
+    .brand img { width:36px; height:36px; display:block; }
+    h1 { font-size:18px; margin:0; font-weight:700; letter-spacing:.2px; }
+    main { max-width:1100px; margin:22px auto; padding:0 16px; }
+    ul { line-height:1.9; }
+    a { color:#0b3a5b; text-decoration:none; }
+    a:hover { text-decoration:underline; }
+    .note { color:var(--muted); }
   </style>
 </head>
 <body>
   <header>
-    <div class="brand">
-      <div class="mark">BB</div>
-      <div>
-        <div style="font-weight:700">law-index</div>
-        <div class="muted">Public artifacts published by ingest workflows</div>
-      </div>
+    <div class="wrap">
+      <div class="brand"><img src="./logo.png" alt="Trust Law Textbooks logo" /></div>
+      <h1>law-index (public artifacts)</h1>
     </div>
   </header>
-
   <main>
-    <div class="card">
-      <h1>Browse artifacts</h1>
-      <p>These read-only files are produced by your private ingest workflow and used by your UIs and agents (no model “hallucinations”).</p>
-      <ul>
-        <li>
-          <a href="catalogs/ingest-catalog.json">
-            <span>Catalogs → <code>ingest-catalog.json</code></span>
-            <span class="muted">summary of books/chapters</span>
-          </a>
-        </li>
-        <li>
-          <a href="texts/">
-            <span>Texts/</span>
-            <span class="muted">clean TXT outputs</span>
-          </a>
-        </li>
-        <li>
-          <a href="page-maps/">
-            <span>Page-maps/</span>
-            <span class="muted">PDF↔TXT page alignment</span>
-          </a>
-        </li>
-      </ul>
-      <p class="muted" style="margin-top:14px">
-        Tip: make sure a <code>.nojekyll</code> file exists at the repo root so GitHub Pages serves files under
-        <code>texts/</code> and <code>page-maps/</code> unchanged.
-      </p>
-    </div>
+    <ul>
+      <li><a href="./catalogs/ingest-catalog.json">catalogs/ingest-catalog.json</a></li>
+      <li><a href="./texts/">texts/</a></li>
+      <li><a href="./page-maps/">page-maps/</a></li>
+    </ul>
+    <p class="note">Artifacts are published here by ingest workflows. The UI reads from these URLs.</p>
   </main>
 </body>
 </html>
