--- a/texts/index.html
+++ b/texts/index.html
@@ -5,12 +5,16 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>law-index / texts</title>
   <style>
-    :root { --bg:#0b3a5b; --ink:#0b3a5b; --panel:#ffffff; --muted:#6b7280; }
+    :root { --bg:#0b3a5b; --panel:#ffffff; --muted:#6b7280; }
     * { box-sizing:border-box; }
-    body { margin:0; font:16px/1.45 system-ui, -apple-system, Segoe UI, Roboto, "Helvetica Neue", Arial, sans-serif; background:#f8fafc; color:#111827; }
-    header { background:var(--bg); color:#fff; padding:16px 20px; }
-    header a { color:#fff; text-decoration:none; opacity:.9 }
-    header a:hover { opacity:1 }
+    body { margin:0; font:16px/1.45 system-ui,-apple-system,Segoe UI,Roboto,"Helvetica Neue",Arial,sans-serif; background:#f8fafc; color:#111827; }
+    header { background:var(--bg); color:#fff; }
+    .wrap { max-width:1100px; margin:0 auto; padding:12px 16px; display:flex; align-items:center; gap:14px; }
+    .brand { display:inline-grid; place-items:center; width:44px; height:44px; border-radius:8px; background:#fff; box-shadow:0 0 0 1px rgba(0,0,0,.06) inset; }
+    .brand img { width:36px; height:36px; display:block; }
+    .crumbs { opacity:.9; font-weight:600; }
+    .crumbs a { color:#fff; text-decoration:none; opacity:.9 }
+    .crumbs a:hover { opacity:1 }
     main { max-width:1100px; margin:22px auto; padding:0 12px; }
     .toolbar { display:flex; gap:10px; align-items:center; margin-bottom:14px; }
     .toolbar input { padding:9px 12px; border:1px solid #e5e7eb; border-radius:10px; width:100%; max-width:420px; }
@@ -25,9 +29,9 @@
 </head>
 <body>
   <header>
-    <div style="max-width:1100px;margin:0 auto;display:flex;gap:14px;align-items:center;">
-      <a href="../">← law-index</a>
-      <div style="opacity:.7">/ texts</div>
+    <div class="wrap">
+      <div class="brand"><img src="../logo.png" alt="Trust Law Textbooks logo" /></div>
+      <div class="crumbs"><a href="../">law-index</a> / texts</div>
     </div>
   </header>
 
@@ -45,10 +49,10 @@
     const EMPTY = document.getElementById('empty');
     const Q = document.getElementById('q');
 
-    const CATALOG_URL = '../catalogs/ingest-catalog.json'; // <- produced by ingest
+    const CATALOG_URL = '../catalogs/ingest-catalog.json';
     let items = [];
 
-    function norm(s){ return (s||'').toLowerCase(); }
+    const norm = s => (s||'').toLowerCase();
 
     function render(list){
       OUT.innerHTML = '';
@@ -90,7 +94,6 @@
     fetch(CATALOG_URL, {cache:'no-store'})
       .then(r => r.ok ? r.json() : Promise.reject(r.status))
       .then(data => {
-        // Accept either {items:[...]} or just [...]
         const arr = Array.isArray(data) ? data : (data.items || []);
         items = arr;
         render(items);
