--- a/page-maps/index.html
+++ b/page-maps/index.html
@@ -3,92 +3,76 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Page Maps — law-index</title>
+  <title>law-index / page-maps</title>
   <style>
-    body { font: 16px/1.45 system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; margin: 24px; color: #0b2540; }
-    h1 { font-size: 22px; margin: 0 0 8px; }
-    .muted { color:#6b7b8f; margin-bottom: 16px; }
-    ul { list-style: none; padding-left: 0; }
-    li { margin: 6px 0; }
-    .dir { font-weight: 600; margin-top: 14px; }
-    a { text-decoration: none; color: #1b66d2; }
-    a:hover { text-decoration: underline; }
-    .note { margin-top: 18px; color:#6b7b8f; font-size: 14px; }
-    .spinner { display:inline-block; width:18px; height:18px; border:2px solid #c7d2e1; border-top-color:#1b66d2; border-radius:50%; animation:spin 0.9s linear infinite; vertical-align: -3px; }
-    @keyframes spin { to { transform: rotate(360deg); } }
-    .err { color:#b00020; margin-top:8px; }
+    :root { --bg:#0b3a5b; --panel:#ffffff; --muted:#6b7280; }
+    * { box-sizing:border-box; }
+    body { margin:0; font:16px/1.45 system-ui,-apple-system,Segoe UI,Roboto,"Helvetica Neue",Arial,sans-serif; background:#f8fafc; color:#111827; }
+    header { background:var(--bg); color:#fff; }
+    .wrap { max-width:1100px; margin:0 auto; padding:12px 16px; display:flex; align-items:center; gap:14px; }
+    .brand { display:inline-grid; place-items:center; width:44px; height:44px; border-radius:8px; background:#fff; box-shadow:0 0 0 1px rgba(0,0,0,.06) inset; }
+    .brand img { width:36px; height:36px; display:block; }
+    .crumbs { opacity:.9; font-weight:600; }
+    .crumbs a { color:#fff; text-decoration:none; opacity:.9 }
+    .crumbs a:hover { opacity:1 }
+    main { max-width:1100px; margin:22px auto; padding:0 12px; }
+    .grid { display:grid; grid-template-columns: repeat(auto-fill, minmax(320px, 1fr)); gap:12px; }
+    .card { background:var(--panel); border:1px solid #e5e7eb; border-radius:12px; padding:12px 14px; box-shadow:0 1px 1px rgba(0,0,0,.03); }
+    h3 { font-size:16px; margin:0 0 6px; }
+    .sub { font-size:12px; color:var(--muted); margin-bottom:8px; }
+    a.btn { display:inline-block; margin-top:6px; padding:7px 10px; border:1px solid #e5e7eb; border-radius:8px; text-decoration:none; color:#111; background:#fff; font-size:12px; }
+    .empty { color:var(--muted); padding:30px 0; text-align:center; }
   </style>
 </head>
 <body>
-  <h1>Page Maps</h1>
-  <div class="muted">Per-book page mappings (calibration results) published by the ingest pipeline.</div>
+  <header>
+    <div class="wrap">
+      <div class="brand"><img src="../logo.png" alt="Trust Law Textbooks logo" /></div>
+      <div class="crumbs"><a href="../">law-index</a> / page-maps</div>
+    </div>
+  </header>
 
-  <div id="status"><span class="spinner"></span> Loading…</div>
-  <div id="out" hidden></div>
+  <main>
+    <div id="out" class="grid" aria-live="polite"></div>
+    <div id="empty" class="empty" hidden>No page-maps yet.</div>
+  </main>
 
   <script>
-    const OWNER = 'Info1691';
-    const REPO  = 'law-index';
-    const BRANCH = 'main';
-    const PAGES_BASE = location.origin + '/' + REPO + '/';
+  (function () {
+    const OUT = document.getElementById('out');
+    const EMPTY = document.getElementById('empty');
+    const CATALOG_URL = '../catalogs/ingest-catalog.json';
 
-    async function listDir(path) {
-      const url = `https://api.github.com/repos/${OWNER}/${REPO}/contents/${path}?ref=${BRANCH}`;
-      const res = await fetch(url, { headers: { 'Accept': 'application/vnd.github+json' }});
-      if (!res.ok) throw new Error(`${res.status} ${res.statusText} for ${path}`);
-      return res.json();
-    }
-    async function collect(path='page-maps') {
-      const items = await listDir(path);
-      let files = [];
-      for (const item of items) {
-        if (item.type === 'dir') {
-          const sub = await collect(item.path);
-          if (sub.length) files.push({ type:'dir', path: item.path, children: sub });
-        } else if (item.type === 'file') {
-          files.push({ type:'file', path: item.path });
-        }
-      }
-      return files;
-    }
-    function render(node, parent) {
-      const ul = document.createElement('ul');
-      parent.appendChild(ul);
-      for (const item of node) {
-        const li = document.createElement('li');
-        if (item.type === 'dir') {
-          li.className = 'dir';
-          li.textContent = '📁 ' + item.path.replace(/^page-maps\//,'');
-          ul.appendChild(li);
-          render(item.children, li);
-        } else {
-          const rel = item.path; // e.g., page-maps/jersey/Litigating-….json
-          const a = document.createElement('a');
-          a.href = PAGES_BASE + rel;
-          a.textContent = '🧭 ' + rel.replace(/^page-maps\//,'');
-          li.appendChild(a);
-          ul.appendChild(li);
-        }
+    function render(list){
+      OUT.innerHTML = '';
+      if(!list.length){ EMPTY.hidden = false; return; }
+      EMPTY.hidden = true;
+      for(const it of list){
+        const el = document.createElement('div');
+        el.className = 'card';
+        const title = it.title || '(untitled)';
+        const juris = it.jurisdiction || '';
+        const ref = it.reference || '';
+        el.innerHTML = `
+          <h3>${title}</h3>
+          <div class="sub">${[juris, ref].filter(Boolean).join(' — ')}</div>
+          <a class="btn" href="${it.page_map_url}">Download page-map JSON</a>
+        `;
+        OUT.appendChild(el);
       }
     }
-    (async () => {
-      try {
-        const tree = await collect('page-maps');
-        const out = document.getElementById('out');
-        const status = document.getElementById('status');
-        status.hidden = true;
-        out.hidden = false;
 
-        if (!tree.length) {
-          out.innerHTML = '<div class="note">No page-maps published yet. Run the ingest workflow to generate them.</div>';
-          return;
-        }
-        render(tree, out);
-      } catch (e) {
-        const status = document.getElementById('status');
-        status.innerHTML = `<div class="err">Failed to load listing: ${e.message}.</div>`;
-      }
-    })();
+    fetch(CATALOG_URL, {cache:'no-store'})
+      .then(r => r.ok ? r.json() : Promise.reject(r.status))
+      .then(data => {
+        const items = (Array.isArray(data) ? data : (data.items || [])).filter(x => !!x.page_map_url);
+        render(items);
+      })
+      .catch(err => {
+        EMPTY.hidden = false;
+        EMPTY.textContent = `Could not load catalog (${err}).`;
+      });
+  }());
   </script>
 </body>
 </html>
