--- a/index.html
+++ b/index.html
@@ -1,39 +1,42 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>law-index (public artifacts)</title>
-  <style>
-    :root { --bg:#0b3a5b; --panel:#ffffff; --muted:#6b7280; }
-    * { box-sizing:border-box; }
-    body { margin:0; font:16px/1.45 system-ui,-apple-system,Segoe UI,Roboto,"Helvetica Neue",Arial,sans-serif; background:#f8fafc; color:#111827; }
-    header { background:var(--bg); color:#fff; }
-    .wrap { max-width:1100px; margin:0 auto; padding:12px 16px; display:flex; align-items:center; gap:14px; }
-    .brand { display:inline-grid; place-items:center; width:44px; height:44px; border-radius:8px; background:#fff; box-shadow:0 0 0 1px rgba(0,0,0,.06) inset; }
-    .brand img { width:36px; height:36px; display:block; }
-    h1 { font-size:18px; margin:0; font-weight:700; letter-spacing:.2px; }
-    main { max-width:1100px; margin:22px auto; padding:0 16px; }
-    ul { line-height:1.9; }
-    a { color:#0b3a5b; text-decoration:none; }
-    a:hover { text-decoration:underline; }
-    .note { color:var(--muted); }
-  </style>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>law–index (public artifacts)</title>
+<style>
+:root { --bg:#0b3a5b; --ink:#0b3a5b; --panel:#ffffff; --muted:#6b7280; }
+* { box-sizing: border-box; }
+body { margin:0; font:16px/1.5 system-ui, -apple-system, Segoe UI, Roboto, "Helvetica Neue", Arial, sans-serif; background:#f7fafc; color:#111827; }
+header { background:var(--bg); color:#fff; padding:18px 20px; }
+header .brand { display:flex; gap:12px; align-items:center; }
+header .mark { width:34px; height:34px; display:grid; place-items:center; background:#fff; border-radius:6px; padding:6px; box-shadow:0 1px 2px rgba(0,0,0,.08); }
+main { max-width:920px; margin:28px auto; padding:0 10px; }
+.card { background:#fff; border:1px solid #e5e7eb; border-radius:12px; padding:18px; box-shadow:0 1px 2px rgba(0,0,0,.04); }
+h1 { margin:0 0 8px 0; font-size:20px; color:#111827; }
+ul { list-style:none; padding:0; margin:0; display:grid; gap:10px; }
+a { display:block; text-decoration:none; color:#0b3a5b; background:#fff; border:1px solid #e5e7eb; border-radius:10px; padding:12px 14px; }
+a:hover { border-color:#74a6cf; background:#f0f7ff; }
+.muted { color:var(--muted); font-size:.925rem; }
+</style>
 </head>
 <body>
-  <header>
-    <div class="wrap">
-      <div class="brand"><img src="./logo.png" alt="Trust Law Textbooks logo" /></div>
-      <h1>law-index (public artifacts)</h1>
-    </div>
-  </header>
-  <main>
+<header>
+  <div class="brand">
+    <img class="mark" src="/law-index/logo.png" alt="BB"/>
+    <strong>Trust Law Textbooks — Index</strong>
+  </div>
+</header>
+<main>
+  <div class="card">
+    <h1>law–index (public artifacts)</h1>
     <ul>
       <li><a href="./catalogs/ingest-catalog.json">catalogs/ingest-catalog.json</a></li>
       <li><a href="./texts/">texts/</a></li>
       <li><a href="./page-maps/">page-maps/</a></li>
     </ul>
-    <p class="note">Artifacts are published here by ingest workflows. The UI reads from these URLs.</p>
-  </main>
+    <p class="muted">Artifacts are published here by ingest workflows. The UI reads from these URLs.</p>
+  </div>
+</main>
 </body>
 </html>
