--- a/page-maps/index.html
+++ b/page-maps/index.html
@@ -1,78 +1,34 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>law-index / page-maps</title>
-  <style>
-    :root { --bg:#0b3a5b; --panel:#ffffff; --muted:#6b7280; }
-    * { box-sizing:border-box; }
-    body { margin:0; font:16px/1.45 system-ui,-apple-system,Segoe UI,Roboto,"Helvetica Neue",Arial,sans-serif; background:#f8fafc; color:#111827; }
-    header { background:var(--bg); color:#fff; }
-    .wrap { max-width:1100px; margin:0 auto; padding:12px 16px; display:flex; align-items:center; gap:14px; }
-    .brand { display:inline-grid; place-items:center; width:44px; height:44px; border-radius:8px; background:#fff; box-shadow:0 0 0 1px rgba(0,0,0,.06) inset; }
-    .brand img { width:36px; height:36px; display:block; }
-    .crumbs { opacity:.9; font-weight:600; }
-    .crumbs a { color:#fff; text-decoration:none; opacity:.9 }
-    .crumbs a:hover { opacity:1 }
-    main { max-width:1100px; margin:22px auto; padding:0 12px; }
-    .grid { display:grid; grid-template-columns: repeat(auto-fill, minmax(320px, 1fr)); gap:12px; }
-    .card { background:var(--panel); border:1px solid #e5e7eb; border-radius:12px; padding:12px 14px; box-shadow:0 1px 1px rgba(0,0,0,.03); }
-    h3 { font-size:16px; margin:0 0 6px; }
-    .sub { font-size:12px; color:var(--muted); margin-bottom:8px; }
-    a.btn { display:inline-block; margin-top:6px; padding:7px 10px; border:1px solid #e5e7eb; border-radius:8px; text-decoration:none; color:#111; background:#fff; font-size:12px; }
-    .empty { color:var(--muted); padding:30px 0; text-align:center; }
-  </style>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>law–index / page-maps</title>
+<style>
+:root { --bg:#0b3a5b; --panel:#ffffff; --muted:#6b7280; }
+* { box-sizing:border-box; }
+body { margin:0; font:16px/1.5 system-ui,-apple-system,Segoe UI,Roboto,"Helvetica Neue",Arial,sans-serif; background:#f7fafc; color:#111827;}
+header { background:#0b3a5b; color:#fff; padding:18px 20px;}
+header .brand{ display:flex; gap:12px; align-items:center;}
+header .mark{ width:34px; height:34px; display:grid; place-items:center; background:#fff; border-radius:6px; padding:6px; box-shadow:0 1px 2px rgba(0,0,0,.08);}
+main { max-width:920px; margin:28px auto; padding:0 10px;}
+.card { background:#fff; border:1px solid #e5e7eb; border-radius:12px; padding:18px; box-shadow:0 1px 2px rgba(0,0,0,.04);}
+h1{ margin:0 0 8px 0; font-size:20px;}
+.muted{ color:#6b7280; font-size:.925rem;}
+</style>
 </head>
 <body>
-  <header>
-    <div class="wrap">
-      <div class="brand"><img src="../logo.png" alt="Trust Law Textbooks logo" /></div>
-      <div class="crumbs"><a href="../">law-index</a> / page-maps</div>
-    </div>
-  </header>
-
-  <main>
-    <div id="out" class="grid" aria-live="polite"></div>
-    <div id="empty" class="empty" hidden>No page-maps yet.</div>
-  </main>
-
-  <script>
-  (function () {
-    const OUT = document.getElementById('out');
-    const EMPTY = document.getElementById('empty');
-    const CATALOG_URL = '../catalogs/ingest-catalog.json';
-
-    function render(list){
-      OUT.innerHTML = '';
-      if(!list.length){ EMPTY.hidden = false; return; }
-      EMPTY.hidden = true;
-      for(const it of list){
-        const el = document.createElement('div');
-        el.className = 'card';
-        const title = it.title || '(untitled)';
-        const juris = it.jurisdiction || '';
-        const ref = it.reference || '';
-        el.innerHTML = `
-          <h3>${title}</h3>
-          <div class="sub">${[juris, ref].filter(Boolean).join(' — ')}</div>
-          <a class="btn" href="${it.page_map_url}">Download page-map JSON</a>
-        `;
-        OUT.appendChild(el);
-      }
-    }
-
-    fetch(CATALOG_URL, {cache:'no-store'})
-      .then(r => r.ok ? r.json() : Promise.reject(r.status))
-      .then(data => {
-        const items = (Array.isArray(data) ? data : (data.items || [])).filter(x => !!x.page_map_url);
-        render(items);
-      })
-      .catch(err => {
-        EMPTY.hidden = false;
-        EMPTY.textContent = `Could not load catalog (${err}).`;
-      });
-  }());
-  </script>
+<header>
+  <div class="brand">
+    <img class="mark" src="/law-index/logo.png" alt="BB"/>
+    <strong>Trust Law Textbooks — Page Maps</strong>
+  </div>
+</header>
+<main>
+  <div class="card">
+    <h1>page-maps/</h1>
+    <p class="muted">This folder will contain page calibration maps (JSON) published by the ingest job.</p>
+  </div>
+</main>
 </body>
 </html>
